y.output
   0  $accept : program $end

   1  program : fundec
   2          | vardec program
   3          |

   4  vardec : TK_IDENTIFIER ':' type '=' value ';'
   5         | TK_IDENTIFIER ':' type '[' LIT_INTEGER ']' valuelist ';'

   6  expr : LIT_INTEGER
   7       | TK_IDENTIFIER
   8       | '-' expr
   9       | expr '+' expr
  10       | expr '-' expr
  11       | expr '*' expr
  12       | expr '/' expr
  13       | expr '<' expr
  14       | expr '>' expr
  15       | expr OPERATOR_GE expr
  16       | expr OPERATOR_LE expr
  17       | expr OPERATOR_NE expr
  18       | expr OPERATOR_EQ expr
  19       | '(' expr ')'

  20  cmd : KW_READ
  21      | KW_PRINT
  22      | KW_RETURN
  23      | KW_IF '(' expr ')' KW_THEN cmd elseCmd
  24      | KW_WHILE '(' expr ')' cmd
  25      | cmdblock

  26  elseCmd : KW_ELSE cmd
  27          |

  28  type : "byte"
  29       | "short"
  30       | "long"
  31       | "float"
  32       | "double"

  33  value : LIT_INTEGER
  34        | LIT_REAL
  35        | LIT_CHAR

  36  valuelist : value valuelist
  37            |

  38  fundec : funheader funbody

  39  funheader : '(' type ')' TK_IDENTIFIER '(' arglist ')'

  40  arglist : arg optarg
  41          |

  42  arg : TK_IDENTIFIER ':' type

  43  optarg : ',' arg optarg
  44         |

  45  funbody : cmdblock

  46  cmdblock : '{' cmdlist '}'

  47  cmdlist : cmd optcmd
  48          |

  49  optcmd : ';' cmd optcmd
  50         |

state 0
	$accept : . program $end  (0)
	program : .  (3)

	TK_IDENTIFIER  shift 1
	'('  shift 2
	$end  reduce 3

	program  goto 3
	fundec  goto 4
	vardec  goto 5
	funheader  goto 6


state 1
	vardec : TK_IDENTIFIER . ':' type '=' value ';'  (4)
	vardec : TK_IDENTIFIER . ':' type '[' LIT_INTEGER ']' valuelist ';'  (5)

	':'  shift 7
	.  error


state 2
	funheader : '(' . type ')' TK_IDENTIFIER '(' arglist ')'  (39)

	"byte"  shift 8
	"short"  shift 9
	"long"  shift 10
	"float"  shift 11
	"double"  shift 12
	.  error

	type  goto 13


state 3
	$accept : program . $end  (0)

	$end  accept


state 4
	program : fundec .  (1)

	.  reduce 1


state 5
	program : vardec . program  (2)
	program : .  (3)

	TK_IDENTIFIER  shift 1
	'('  shift 2
	$end  reduce 3

	program  goto 14
	fundec  goto 4
	vardec  goto 5
	funheader  goto 6


state 6
	fundec : funheader . funbody  (38)

	'{'  shift 15
	.  error

	cmdblock  goto 16
	funbody  goto 17


state 7
	vardec : TK_IDENTIFIER ':' . type '=' value ';'  (4)
	vardec : TK_IDENTIFIER ':' . type '[' LIT_INTEGER ']' valuelist ';'  (5)

	"byte"  shift 8
	"short"  shift 9
	"long"  shift 10
	"float"  shift 11
	"double"  shift 12
	.  error

	type  goto 18


state 8
	type : "byte" .  (28)

	.  reduce 28


state 9
	type : "short" .  (29)

	.  reduce 29


state 10
	type : "long" .  (30)

	.  reduce 30


state 11
	type : "float" .  (31)

	.  reduce 31


state 12
	type : "double" .  (32)

	.  reduce 32


state 13
	funheader : '(' type . ')' TK_IDENTIFIER '(' arglist ')'  (39)

	')'  shift 19
	.  error


state 14
	program : vardec program .  (2)

	.  reduce 2


state 15
	cmdblock : '{' . cmdlist '}'  (46)
	cmdlist : .  (48)

	KW_IF  shift 20
	KW_WHILE  shift 21
	KW_READ  shift 22
	KW_RETURN  shift 23
	KW_PRINT  shift 24
	'{'  shift 15
	'}'  reduce 48

	cmd  goto 25
	cmdblock  goto 26
	cmdlist  goto 27


state 16
	funbody : cmdblock .  (45)

	.  reduce 45


state 17
	fundec : funheader funbody .  (38)

	.  reduce 38


state 18
	vardec : TK_IDENTIFIER ':' type . '=' value ';'  (4)
	vardec : TK_IDENTIFIER ':' type . '[' LIT_INTEGER ']' valuelist ';'  (5)

	'='  shift 28
	'['  shift 29
	.  error


state 19
	funheader : '(' type ')' . TK_IDENTIFIER '(' arglist ')'  (39)

	TK_IDENTIFIER  shift 30
	.  error


state 20
	cmd : KW_IF . '(' expr ')' KW_THEN cmd elseCmd  (23)

	'('  shift 31
	.  error


state 21
	cmd : KW_WHILE . '(' expr ')' cmd  (24)

	'('  shift 32
	.  error


state 22
	cmd : KW_READ .  (20)

	.  reduce 20


state 23
	cmd : KW_RETURN .  (22)

	.  reduce 22


state 24
	cmd : KW_PRINT .  (21)

	.  reduce 21


state 25
	cmdlist : cmd . optcmd  (47)
	optcmd : .  (50)

	';'  shift 33
	'}'  reduce 50

	optcmd  goto 34


state 26
	cmd : cmdblock .  (25)

	.  reduce 25


state 27
	cmdblock : '{' cmdlist . '}'  (46)

	'}'  shift 35
	.  error


state 28
	vardec : TK_IDENTIFIER ':' type '=' . value ';'  (4)

	LIT_INTEGER  shift 36
	LIT_REAL  shift 37
	LIT_CHAR  shift 38
	.  error

	value  goto 39


state 29
	vardec : TK_IDENTIFIER ':' type '[' . LIT_INTEGER ']' valuelist ';'  (5)

	LIT_INTEGER  shift 40
	.  error


state 30
	funheader : '(' type ')' TK_IDENTIFIER . '(' arglist ')'  (39)

	'('  shift 41
	.  error


state 31
	cmd : KW_IF '(' . expr ')' KW_THEN cmd elseCmd  (23)

	TK_IDENTIFIER  shift 42
	LIT_INTEGER  shift 43
	'-'  shift 44
	'('  shift 45
	.  error

	expr  goto 46


state 32
	cmd : KW_WHILE '(' . expr ')' cmd  (24)

	TK_IDENTIFIER  shift 42
	LIT_INTEGER  shift 43
	'-'  shift 44
	'('  shift 45
	.  error

	expr  goto 47


state 33
	optcmd : ';' . cmd optcmd  (49)

	KW_IF  shift 20
	KW_WHILE  shift 21
	KW_READ  shift 22
	KW_RETURN  shift 23
	KW_PRINT  shift 24
	'{'  shift 15
	.  error

	cmd  goto 48
	cmdblock  goto 26


state 34
	cmdlist : cmd optcmd .  (47)

	.  reduce 47


state 35
	cmdblock : '{' cmdlist '}' .  (46)

	.  reduce 46


state 36
	value : LIT_INTEGER .  (33)

	.  reduce 33


state 37
	value : LIT_REAL .  (34)

	.  reduce 34


state 38
	value : LIT_CHAR .  (35)

	.  reduce 35


state 39
	vardec : TK_IDENTIFIER ':' type '=' value . ';'  (4)

	';'  shift 49
	.  error


state 40
	vardec : TK_IDENTIFIER ':' type '[' LIT_INTEGER . ']' valuelist ';'  (5)

	']'  shift 50
	.  error


state 41
	funheader : '(' type ')' TK_IDENTIFIER '(' . arglist ')'  (39)
	arglist : .  (41)

	TK_IDENTIFIER  shift 51
	')'  reduce 41

	arglist  goto 52
	arg  goto 53


state 42
	expr : TK_IDENTIFIER .  (7)

	.  reduce 7


state 43
	expr : LIT_INTEGER .  (6)

	.  reduce 6


state 44
	expr : '-' . expr  (8)

	TK_IDENTIFIER  shift 42
	LIT_INTEGER  shift 43
	'-'  shift 44
	'('  shift 45
	.  error

	expr  goto 54


state 45
	expr : '(' . expr ')'  (19)

	TK_IDENTIFIER  shift 42
	LIT_INTEGER  shift 43
	'-'  shift 44
	'('  shift 45
	.  error

	expr  goto 55


state 46
	expr : expr . '+' expr  (9)
	expr : expr . '-' expr  (10)
	expr : expr . '*' expr  (11)
	expr : expr . '/' expr  (12)
	expr : expr . '<' expr  (13)
	expr : expr . '>' expr  (14)
	expr : expr . OPERATOR_GE expr  (15)
	expr : expr . OPERATOR_LE expr  (16)
	expr : expr . OPERATOR_NE expr  (17)
	expr : expr . OPERATOR_EQ expr  (18)
	cmd : KW_IF '(' expr . ')' KW_THEN cmd elseCmd  (23)

	OPERATOR_LE  shift 56
	OPERATOR_GE  shift 57
	OPERATOR_EQ  shift 58
	OPERATOR_NE  shift 59
	'<'  shift 60
	'>'  shift 61
	'+'  shift 62
	'-'  shift 63
	'*'  shift 64
	'/'  shift 65
	')'  shift 66
	.  error


state 47
	expr : expr . '+' expr  (9)
	expr : expr . '-' expr  (10)
	expr : expr . '*' expr  (11)
	expr : expr . '/' expr  (12)
	expr : expr . '<' expr  (13)
	expr : expr . '>' expr  (14)
	expr : expr . OPERATOR_GE expr  (15)
	expr : expr . OPERATOR_LE expr  (16)
	expr : expr . OPERATOR_NE expr  (17)
	expr : expr . OPERATOR_EQ expr  (18)
	cmd : KW_WHILE '(' expr . ')' cmd  (24)

	OPERATOR_LE  shift 56
	OPERATOR_GE  shift 57
	OPERATOR_EQ  shift 58
	OPERATOR_NE  shift 59
	'<'  shift 60
	'>'  shift 61
	'+'  shift 62
	'-'  shift 63
	'*'  shift 64
	'/'  shift 65
	')'  shift 67
	.  error


state 48
	optcmd : ';' cmd . optcmd  (49)
	optcmd : .  (50)

	';'  shift 33
	'}'  reduce 50

	optcmd  goto 68


state 49
	vardec : TK_IDENTIFIER ':' type '=' value ';' .  (4)

	.  reduce 4


state 50
	vardec : TK_IDENTIFIER ':' type '[' LIT_INTEGER ']' . valuelist ';'  (5)
	valuelist : .  (37)

	LIT_INTEGER  shift 36
	LIT_REAL  shift 37
	LIT_CHAR  shift 38
	';'  reduce 37

	value  goto 69
	valuelist  goto 70


state 51
	arg : TK_IDENTIFIER . ':' type  (42)

	':'  shift 71
	.  error


state 52
	funheader : '(' type ')' TK_IDENTIFIER '(' arglist . ')'  (39)

	')'  shift 72
	.  error


state 53
	arglist : arg . optarg  (40)
	optarg : .  (44)

	','  shift 73
	')'  reduce 44

	optarg  goto 74


state 54
	expr : '-' expr .  (8)
	expr : expr . '+' expr  (9)
	expr : expr . '-' expr  (10)
	expr : expr . '*' expr  (11)
	expr : expr . '/' expr  (12)
	expr : expr . '<' expr  (13)
	expr : expr . '>' expr  (14)
	expr : expr . OPERATOR_GE expr  (15)
	expr : expr . OPERATOR_LE expr  (16)
	expr : expr . OPERATOR_NE expr  (17)
	expr : expr . OPERATOR_EQ expr  (18)

	'*'  shift 64
	'/'  shift 65
	OPERATOR_LE  reduce 8
	OPERATOR_GE  reduce 8
	OPERATOR_EQ  reduce 8
	OPERATOR_NE  reduce 8
	'<'  reduce 8
	'>'  reduce 8
	'+'  reduce 8
	'-'  reduce 8
	')'  reduce 8


state 55
	expr : expr . '+' expr  (9)
	expr : expr . '-' expr  (10)
	expr : expr . '*' expr  (11)
	expr : expr . '/' expr  (12)
	expr : expr . '<' expr  (13)
	expr : expr . '>' expr  (14)
	expr : expr . OPERATOR_GE expr  (15)
	expr : expr . OPERATOR_LE expr  (16)
	expr : expr . OPERATOR_NE expr  (17)
	expr : expr . OPERATOR_EQ expr  (18)
	expr : '(' expr . ')'  (19)

	OPERATOR_LE  shift 56
	OPERATOR_GE  shift 57
	OPERATOR_EQ  shift 58
	OPERATOR_NE  shift 59
	'<'  shift 60
	'>'  shift 61
	'+'  shift 62
	'-'  shift 63
	'*'  shift 64
	'/'  shift 65
	')'  shift 75
	.  error


state 56
	expr : expr OPERATOR_LE . expr  (16)

	TK_IDENTIFIER  shift 42
	LIT_INTEGER  shift 43
	'-'  shift 44
	'('  shift 45
	.  error

	expr  goto 76


state 57
	expr : expr OPERATOR_GE . expr  (15)

	TK_IDENTIFIER  shift 42
	LIT_INTEGER  shift 43
	'-'  shift 44
	'('  shift 45
	.  error

	expr  goto 77


state 58
	expr : expr OPERATOR_EQ . expr  (18)

	TK_IDENTIFIER  shift 42
	LIT_INTEGER  shift 43
	'-'  shift 44
	'('  shift 45
	.  error

	expr  goto 78


state 59
	expr : expr OPERATOR_NE . expr  (17)

	TK_IDENTIFIER  shift 42
	LIT_INTEGER  shift 43
	'-'  shift 44
	'('  shift 45
	.  error

	expr  goto 79


state 60
	expr : expr '<' . expr  (13)

	TK_IDENTIFIER  shift 42
	LIT_INTEGER  shift 43
	'-'  shift 44
	'('  shift 45
	.  error

	expr  goto 80


state 61
	expr : expr '>' . expr  (14)

	TK_IDENTIFIER  shift 42
	LIT_INTEGER  shift 43
	'-'  shift 44
	'('  shift 45
	.  error

	expr  goto 81


state 62
	expr : expr '+' . expr  (9)

	TK_IDENTIFIER  shift 42
	LIT_INTEGER  shift 43
	'-'  shift 44
	'('  shift 45
	.  error

	expr  goto 82


state 63
	expr : expr '-' . expr  (10)

	TK_IDENTIFIER  shift 42
	LIT_INTEGER  shift 43
	'-'  shift 44
	'('  shift 45
	.  error

	expr  goto 83


state 64
	expr : expr '*' . expr  (11)

	TK_IDENTIFIER  shift 42
	LIT_INTEGER  shift 43
	'-'  shift 44
	'('  shift 45
	.  error

	expr  goto 84


state 65
	expr : expr '/' . expr  (12)

	TK_IDENTIFIER  shift 42
	LIT_INTEGER  shift 43
	'-'  shift 44
	'('  shift 45
	.  error

	expr  goto 85


state 66
	cmd : KW_IF '(' expr ')' . KW_THEN cmd elseCmd  (23)

	KW_THEN  shift 86
	.  error


state 67
	cmd : KW_WHILE '(' expr ')' . cmd  (24)

	KW_IF  shift 20
	KW_WHILE  shift 21
	KW_READ  shift 22
	KW_RETURN  shift 23
	KW_PRINT  shift 24
	'{'  shift 15
	.  error

	cmd  goto 87
	cmdblock  goto 26


state 68
	optcmd : ';' cmd optcmd .  (49)

	.  reduce 49


state 69
	valuelist : value . valuelist  (36)
	valuelist : .  (37)

	LIT_INTEGER  shift 36
	LIT_REAL  shift 37
	LIT_CHAR  shift 38
	';'  reduce 37

	value  goto 69
	valuelist  goto 88


state 70
	vardec : TK_IDENTIFIER ':' type '[' LIT_INTEGER ']' valuelist . ';'  (5)

	';'  shift 89
	.  error


state 71
	arg : TK_IDENTIFIER ':' . type  (42)

	"byte"  shift 8
	"short"  shift 9
	"long"  shift 10
	"float"  shift 11
	"double"  shift 12
	.  error

	type  goto 90


state 72
	funheader : '(' type ')' TK_IDENTIFIER '(' arglist ')' .  (39)

	.  reduce 39


state 73
	optarg : ',' . arg optarg  (43)

	TK_IDENTIFIER  shift 51
	.  error

	arg  goto 91


state 74
	arglist : arg optarg .  (40)

	.  reduce 40


state 75
	expr : '(' expr ')' .  (19)

	.  reduce 19


state 76
	expr : expr . '+' expr  (9)
	expr : expr . '-' expr  (10)
	expr : expr . '*' expr  (11)
	expr : expr . '/' expr  (12)
	expr : expr . '<' expr  (13)
	expr : expr . '>' expr  (14)
	expr : expr . OPERATOR_GE expr  (15)
	expr : expr . OPERATOR_LE expr  (16)
	expr : expr OPERATOR_LE expr .  (16)
	expr : expr . OPERATOR_NE expr  (17)
	expr : expr . OPERATOR_EQ expr  (18)

	'+'  shift 62
	'-'  shift 63
	'*'  shift 64
	'/'  shift 65
	OPERATOR_LE  reduce 16
	OPERATOR_GE  reduce 16
	OPERATOR_EQ  reduce 16
	OPERATOR_NE  reduce 16
	'<'  reduce 16
	'>'  reduce 16
	')'  reduce 16


state 77
	expr : expr . '+' expr  (9)
	expr : expr . '-' expr  (10)
	expr : expr . '*' expr  (11)
	expr : expr . '/' expr  (12)
	expr : expr . '<' expr  (13)
	expr : expr . '>' expr  (14)
	expr : expr . OPERATOR_GE expr  (15)
	expr : expr OPERATOR_GE expr .  (15)
	expr : expr . OPERATOR_LE expr  (16)
	expr : expr . OPERATOR_NE expr  (17)
	expr : expr . OPERATOR_EQ expr  (18)

	'+'  shift 62
	'-'  shift 63
	'*'  shift 64
	'/'  shift 65
	OPERATOR_LE  reduce 15
	OPERATOR_GE  reduce 15
	OPERATOR_EQ  reduce 15
	OPERATOR_NE  reduce 15
	'<'  reduce 15
	'>'  reduce 15
	')'  reduce 15


state 78
	expr : expr . '+' expr  (9)
	expr : expr . '-' expr  (10)
	expr : expr . '*' expr  (11)
	expr : expr . '/' expr  (12)
	expr : expr . '<' expr  (13)
	expr : expr . '>' expr  (14)
	expr : expr . OPERATOR_GE expr  (15)
	expr : expr . OPERATOR_LE expr  (16)
	expr : expr . OPERATOR_NE expr  (17)
	expr : expr . OPERATOR_EQ expr  (18)
	expr : expr OPERATOR_EQ expr .  (18)

	'+'  shift 62
	'-'  shift 63
	'*'  shift 64
	'/'  shift 65
	OPERATOR_LE  reduce 18
	OPERATOR_GE  reduce 18
	OPERATOR_EQ  reduce 18
	OPERATOR_NE  reduce 18
	'<'  reduce 18
	'>'  reduce 18
	')'  reduce 18


state 79
	expr : expr . '+' expr  (9)
	expr : expr . '-' expr  (10)
	expr : expr . '*' expr  (11)
	expr : expr . '/' expr  (12)
	expr : expr . '<' expr  (13)
	expr : expr . '>' expr  (14)
	expr : expr . OPERATOR_GE expr  (15)
	expr : expr . OPERATOR_LE expr  (16)
	expr : expr . OPERATOR_NE expr  (17)
	expr : expr OPERATOR_NE expr .  (17)
	expr : expr . OPERATOR_EQ expr  (18)

	'+'  shift 62
	'-'  shift 63
	'*'  shift 64
	'/'  shift 65
	OPERATOR_LE  reduce 17
	OPERATOR_GE  reduce 17
	OPERATOR_EQ  reduce 17
	OPERATOR_NE  reduce 17
	'<'  reduce 17
	'>'  reduce 17
	')'  reduce 17


state 80
	expr : expr . '+' expr  (9)
	expr : expr . '-' expr  (10)
	expr : expr . '*' expr  (11)
	expr : expr . '/' expr  (12)
	expr : expr . '<' expr  (13)
	expr : expr '<' expr .  (13)
	expr : expr . '>' expr  (14)
	expr : expr . OPERATOR_GE expr  (15)
	expr : expr . OPERATOR_LE expr  (16)
	expr : expr . OPERATOR_NE expr  (17)
	expr : expr . OPERATOR_EQ expr  (18)

	'+'  shift 62
	'-'  shift 63
	'*'  shift 64
	'/'  shift 65
	OPERATOR_LE  reduce 13
	OPERATOR_GE  reduce 13
	OPERATOR_EQ  reduce 13
	OPERATOR_NE  reduce 13
	'<'  reduce 13
	'>'  reduce 13
	')'  reduce 13


state 81
	expr : expr . '+' expr  (9)
	expr : expr . '-' expr  (10)
	expr : expr . '*' expr  (11)
	expr : expr . '/' expr  (12)
	expr : expr . '<' expr  (13)
	expr : expr . '>' expr  (14)
	expr : expr '>' expr .  (14)
	expr : expr . OPERATOR_GE expr  (15)
	expr : expr . OPERATOR_LE expr  (16)
	expr : expr . OPERATOR_NE expr  (17)
	expr : expr . OPERATOR_EQ expr  (18)

	'+'  shift 62
	'-'  shift 63
	'*'  shift 64
	'/'  shift 65
	OPERATOR_LE  reduce 14
	OPERATOR_GE  reduce 14
	OPERATOR_EQ  reduce 14
	OPERATOR_NE  reduce 14
	'<'  reduce 14
	'>'  reduce 14
	')'  reduce 14


state 82
	expr : expr . '+' expr  (9)
	expr : expr '+' expr .  (9)
	expr : expr . '-' expr  (10)
	expr : expr . '*' expr  (11)
	expr : expr . '/' expr  (12)
	expr : expr . '<' expr  (13)
	expr : expr . '>' expr  (14)
	expr : expr . OPERATOR_GE expr  (15)
	expr : expr . OPERATOR_LE expr  (16)
	expr : expr . OPERATOR_NE expr  (17)
	expr : expr . OPERATOR_EQ expr  (18)

	'*'  shift 64
	'/'  shift 65
	OPERATOR_LE  reduce 9
	OPERATOR_GE  reduce 9
	OPERATOR_EQ  reduce 9
	OPERATOR_NE  reduce 9
	'<'  reduce 9
	'>'  reduce 9
	'+'  reduce 9
	'-'  reduce 9
	')'  reduce 9


state 83
	expr : expr . '+' expr  (9)
	expr : expr . '-' expr  (10)
	expr : expr '-' expr .  (10)
	expr : expr . '*' expr  (11)
	expr : expr . '/' expr  (12)
	expr : expr . '<' expr  (13)
	expr : expr . '>' expr  (14)
	expr : expr . OPERATOR_GE expr  (15)
	expr : expr . OPERATOR_LE expr  (16)
	expr : expr . OPERATOR_NE expr  (17)
	expr : expr . OPERATOR_EQ expr  (18)

	'*'  shift 64
	'/'  shift 65
	OPERATOR_LE  reduce 10
	OPERATOR_GE  reduce 10
	OPERATOR_EQ  reduce 10
	OPERATOR_NE  reduce 10
	'<'  reduce 10
	'>'  reduce 10
	'+'  reduce 10
	'-'  reduce 10
	')'  reduce 10


state 84
	expr : expr . '+' expr  (9)
	expr : expr . '-' expr  (10)
	expr : expr . '*' expr  (11)
	expr : expr '*' expr .  (11)
	expr : expr . '/' expr  (12)
	expr : expr . '<' expr  (13)
	expr : expr . '>' expr  (14)
	expr : expr . OPERATOR_GE expr  (15)
	expr : expr . OPERATOR_LE expr  (16)
	expr : expr . OPERATOR_NE expr  (17)
	expr : expr . OPERATOR_EQ expr  (18)

	.  reduce 11

